@@ -13,6 +13,7 @@ import com.springproject.dhVinh.SpringBootProject.service.IAdminService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -25,15 +26,20 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.sql.Blob;
+import java.sql.Date;
+import java.sql.SQLException;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/auth")
@@ -52,35 +58,36 @@ public class AuthController {
 
     private final PasswordEncoder passwordEncoder;
 
-    @PostMapping("/register")
-    @SneakyThrows
-    public ResponseEntity<?> registerAdmin(@ModelAttribute(name = "AdminResponse") AdminResponse response,
-                                           @RequestPart("avatar") MultipartFile avatar) {
-
-        try {
-            Path basePath = Paths.get("/home/suanmanh/Documents/sendUBUNTU/argon-dashboard-react-master/src/assets/img/avatar");
-            Files.createDirectories(basePath);
-
-            Path filePath = basePath.resolve(avatar.getOriginalFilename());
-            try (InputStream inputStream = avatar.getInputStream()) {
-                Files.copy(inputStream, filePath, StandardCopyOption.REPLACE_EXISTING);
-            }
-            String avatarPath = filePath.toAbsolutePath().toString();
-            Admin admin = adminService.registerAdmin(response.getEmail(),
-                    response.getPassword(), response.getFirstName(), response.getLastName(), response.getBirthDate(),
-                    avatarPath, response.getGender(), response.getTelephone(), response.getAddress());
-            Map<String, Object> message = new HashMap<>();
-            message.put("message", "success");
-            message.put("data", admin);
-            return ResponseEntity.ok().body(objectMapper.writeValueAsString(message));
-        } catch (AdminAlreadyExistsException e) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(e.getMessage());
-        }
+    @PostMapping(value = "/register")
+    public ResponseEntity<AdminResponse> registerAdmin(
+            @RequestParam("email") String email,
+            @RequestParam("password") String password,
+            @RequestParam("firstName") String firstName,
+            @RequestParam("lastName") String lastName,
+            @RequestParam("birthDate") Date birthDate,
+            @RequestParam("gender") String gender,
+            @RequestParam("telephone") String telephone,
+            @RequestParam("address") String address,
+            @RequestParam("avatar") MultipartFile avatar) throws SQLException, IOException {
+        Admin savedAdmin = adminService.registerAdmin(email, password, firstName, lastName, birthDate, gender, telephone, address, avatar);
+        AdminResponse response = new AdminResponse(
+                savedAdmin.getEmail(),
+                savedAdmin.getPassword(),
+                savedAdmin.getFirstName(),
+                savedAdmin.getLastName(),
+                savedAdmin.getBirthDate(),
+                savedAdmin.getAvatar() != null ? savedAdmin.getAvatar().getBytes(1, (int) savedAdmin.getAvatar().length()) : null,
+                savedAdmin.getGender(),
+                savedAdmin.getTelephone(),
+                savedAdmin.getAddress()
+        );
+        return ResponseEntity.ok(response);
     }
 
 
+
     @PostMapping("/login")
-    public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest request) {
+    public ResponseEntity<?> authenticateAdmin(@Valid @RequestBody LoginRequest request) {
         Authentication authentication =
                 authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
@@ -88,10 +95,21 @@ public class AuthController {
         AdminDetail adminDetail = (AdminDetail) authentication.getPrincipal();
         List<String> roles = adminDetail.getAuthorities()
                 .stream()
-                .map(GrantedAuthority::getAuthority).toList();
+                .map(GrantedAuthority::getAuthority)
+                .collect(Collectors.toList());
         String firstName = adminDetail.getFirstName();
         String lastName = adminDetail.getLastName();
-        String avatar = adminDetail.getAvatar();
+        Blob avatar = adminDetail.getAvatar();
+
+        byte[] avatarBytes = null;
+        if (avatar != null) {
+            try {
+                avatarBytes = avatar.getBytes(1, (int) avatar.length());
+            } catch (SQLException e) {
+                e.printStackTrace(); // Handle exception appropriately
+            }
+        }
+
         return ResponseEntity.ok(new JwtResponse(
                 adminDetail.getId(),
                 adminDetail.getEmail(),
@@ -99,9 +117,10 @@ public class AuthController {
                 roles,
                 firstName,
                 lastName,
-                avatar
+                avatarBytes
         ));
     }
+
     @GetMapping("/check-role")
     public ResponseEntity<Map<String, String>> getRole(Authentication authentication) {
         if (authentication == null || !authentication.isAuthenticated()) {
